2008-05-18  Marcus Meissner  <marcus@jet.franken.de>

	* puppy.c: Implemented get_info_func.

2008-03-12  Marcus Meissner  <marcus@jet.franken.de>

	* puppy.c: Convert from ISO-8859-1 to current locale
	  for filenames using iconv.
	  Store mapped names internally, since the movies have 0x5
	  character in front.

2008-03-05  Marcus Meissner  <marcus@jet.franken.de>

	* *.[ch]: Ported puppy 1.11 by Peter Urbanek to libgphoto2.