@@ -2,6 +2,9 @@
 
 	* puppy.c: Implemented get_info_func.
 
+	* puppy.c: Use TURBO mode during download.
+		   Escape "/" in filenames by "-".
+
 2008-03-12  Marcus Meissner  <marcus@jet.franken.de>
 
 	* puppy.c: Convert from ISO-8859-1 to current locale
